# smart-home

./: .gitignore  LICENSE  README.md
grafana-dashboards/: Smart Home Dashboard.json
i40/: .eslintrc.json  package-lock.json  package.json  tsconfig.json
i40/resources/: aasJsonSchema.json
i40/src/: index.ts  indexViaJsonSchemaTypes.ts
i40/src/lib/: AasJsonSchemaTypes.d.ts
i40/src/util/: Util.ts
retrieve-homematic/: DBManager.py  HomematicRetriever.py  hmip_generate_auth_token.py  main.py  pyproject.toml  requirements.txt  retrieve-homematic.py
retrieve-homematic/retrieve_homematic/: DBManager.py  HomematicRetriever.py  hmip_cli.py  hmip_generate_auth_token.py  main.py
retrieve-homematic/retrieve_homematic/util/: Logger.py  TimeUtil.py
retrieve-homematic/util/: Logger.py  TimeUtil.py
retrieve-shelly/: pyproject.toml
retrieve-shelly/retrieve_shelly/: db_manager.py  main.py  main_shelly_mqtt.py  main_shelly_plug_retriever.py  mqtt_subscriber.py  shelly_plug_config.json
retrieve-shelly/retrieve_shelly/core/: db_manager.py  logging_config.py  mqtt_subscriber.py  shelly_plug_retriever.py
retrieve-tplink-hs110/: main.js  package-lock.json  package.json
retrieve-tuya (DEPRECATED)/: main.js  package-lock.json  package.json
