[tool.poetry]
name = "retrieve-homematic"
version = "0.1.0"
description = "Python script for retrieving Homematic sensor values"
authors = ["Oliver Frendo <ofrendo@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"
influxdb-client = "^1.31.0"
pydantic = "^1.9.2"
homematicip = "^1.0.9"
pytz = "^2022.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
