[tool.poetry]
name = "retrieve-shelly"
version = "0.1.0"
description = "Python script for listening to MQTT messages of Shelly H&T sensors"
authors = ["Oliver Frendo <ofrendo@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.7"
paho-mqtt = "^1.6.1"
influxdb-client = "^1.31.0"
pydantic = "^1.9.2"
pytz = "^2022.2.1"
pyShelly = "1.0.2"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
